<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="checkout_title">Checkout</string>
    <string name="checkout_one_click_payment_method_section_title">Your payment methods</string>
    <string name="checkout_payment_method_section_title">Payment Methods</string>
    <string name="checkout_payment_method_section_with_one_click_title">Select other method</string>
    <string name="checkout_select_other_payment_method">Select other method</string>
    <string name="checkout_store_details">Save for my next payment</string>
    <string name="checkout_error_message_default">An error occurred during the operation.</string>
    <string name="checkout_error_message_network_unavailable">Failed to connect to the internet, please check your internet connection.</string>
    <string name="checkout_error_message_network_hint">Check your internet connection and try again.</string>
    <string name="checkout_pay_amount_format">Pay %s</string>
    <string name="checkout_surcharge_cost_format" translatable="false">%s  %s</string>
    <string name="checkout_surcharge_total_amount_format">The total amount includes %s of surcharge.</string>
    <string name="checkout_one_click_delete_confirmation_message">Delete payment method %s?</string>
    <string name="checkout_one_click_delete">Delete</string>
    <string name="checkout_error_dialog_title">Error</string>
    <string name="checkout_error_redirect_failed">Redirect failed</string>
    <string name="checkout_ok">OK</string>
    <string name="checkout_skip">Skip</string>
    <string name="checkout_backspace">Backspace</string>

    <!-- Card -->
    <string name="checkout_card_holder_name_hint">Cardholder name</string>
    <string name="checkout_card_card_number_hint">Card Number</string>
    <string name="checkout_card_expiry_date_caption">Expiry Date</string>
    <string name="checkout_card_expiry_date_hint">MM/YY</string>
    <string name="checkout_card_security_code_hint">CVC / CVV</string>
    <string name="checkout_card_installments">Number of installments</string>
    <string name="checkout_card_nfc_error_chip_unsupported">Please present a single credit card.</string>
    <string name="checkout_card_nfc_error_card_unsupported">This card is unsupported.</string>
    <string name="checkout_card_nfc_error_connection_lost">Please try again.</string>
    <string name="checkout_card_one_click_expires_format">Expires %s</string>
    <string name="checkout_card_one_click_security_code_prompt">Please enter the CVC code for %s</string>
    <string name="checkout_card_reader_tutorial_enable_nfc">Enable NFC</string>
    <string name="checkout_card_reader_tutorial_action">NFC Card Reader</string>
    <string name="checkout_card_reader_tutorial_title">Credit Card Reader</string>
    <string name="checkout_card_reader_tutorial_explanation">Hold the credit card close to the top back of your mobile phone.</string>
    <string name="checkout_nfc_settings_redirect_failed_toast">Redirect to NFC settings failed</string>

    <!-- Numpad -->
    <string name="numpad_zero" translatable="false">0</string>
    <string name="numpad_one" translatable="false">1</string>
    <string name="numpad_two" translatable="false">2</string>
    <string name="numpad_three" translatable="false">3</string>
    <string name="numpad_four" translatable="false">4</string>
    <string name="numpad_five" translatable="false">5</string>
    <string name="numpad_six" translatable="false">6</string>
    <string name="numpad_seven" translatable="false">7</string>
    <string name="numpad_eight" translatable="false">8</string>
    <string name="numpad_nine" translatable="false">9</string>

    <!-- Card.CupSecurePlus -->
    <string name="checkout_card_cup_secure_plus_phone_number_hint">Mobile number</string>
    <string name="checkout_card_cup_secure_plus_details_activity_title">Authenticate</string>
    <string name="checkout_card_cup_secure_plus_sms_code_prompt">A text message with a verification code has been sent to your registered phone number.</string>
    <string name="checkout_card_cup_secure_plus_sms_code_caption">SMS Code</string>

    <!-- Doku -->
    <string name="checkout_doku_email_address">E-mail address</string>
    <string name="checkout_doku_first_name">First name</string>
    <string name="checkout_doku_last_name">Last name</string>

    <!-- Giropay -->
    <string name="checkout_giropay_search_hint">Bankname / BIC / Bankleitzahl</string>
    <string name="checkout_giropay_error_search_no_results">No search results</string>

    <!-- Issuer -->
    <string name="checkout_issuer_choose_issuer">Select your bank</string>
    <string name="checkout_issuer_open_with_app_format">Open with %s</string>

    <!-- QiwiWallet -->
    <string name="checkout_qiwiwallet_country_code_tooltip">Country Code</string>
    <string name="checkout_qiwiwallet_country_code_format" translatable="false">%s (%s)</string>
    <string name="checkout_qiwiwallet_phone_number_caption">Mobile number</string>
    <string name="checkout_qiwiwallet_phone_number_hint">123–456–789</string>

    <!-- SepaDirectDebit -->
    <string name="checkout_sdd_iban">Account Number (IBAN)</string>
    <string name="checkout_sdd_account_holder_name">Holder Name</string>
    <string name="checkout_sdd_consent">I agree that the amount below will be debited from my bank account.</string>
    <string name="checkout_sdd_iban_suggestion">Did you mean</string>

    <!-- Open Invoice -->

    <!-- Personal Details -->
    <string name="checkout_personal_details_title">Personal Details</string>
    <string name="checkout_personal_details_first_name">First name</string>
    <string name="checkout_personal_details_infix">Prefix</string>
    <string name="checkout_personal_details_last_name">Last name</string>
    <string name="checkout_personal_details_gender">Gender</string>
    <string name="checkout_personal_details_gender_male">Male</string>
    <string name="checkout_personal_details_gender_female">Female</string>
    <string name="checkout_personal_details_gender_unknown">Unknown</string>
    <string name="checkout_personal_details_date_of_birth">Date of birth</string>
    <string name="checkout_personal_details_telehone_number">Telephone number</string>
    <string name="checkout_personal_details_social_security_number">Social Security Number</string>
    <string name="checkout_personal_details_social_security_number_hint" translatable="false">YY MM DD NNNN</string>
    <string name="checkout_personal_details_shopper_email">E-mail</string>

    <!-- Address -->
    <string name="checkout_address_street">Street</string>
    <string name="checkout_address_house_number">House number</string>
    <string name="checkout_address_city">City</string>
    <string name="checkout_address_postal_code">Postal code</string>
    <string name="checkout_address_country">Country</string>

    <string name="checkout_billing_address_title">Billing address</string>
    <string name="checkout_delivery_address_title">Delivery address</string>
    <string name="checkout_separate_delivery_address">Separate delivery address</string>

    <string name="checkout_terms_and_conditions_title">Terms &amp; Conditions</string>
    <string name="checkout_terms_and_conditions_toggle">Accept Terms &amp; Conditions</string>
    <string name="checkout_klarna_terms_and_conditions_text">I consent to the processing of my data by Klarna for the purposes of identity- and credit assessment and the settlement of the purchase. I may revoke my %s for the processing of data and for the purposes for which this is possible according to law. The general terms and conditions of the merchant apply.</string>
    <string name="checkout_klarna_consent">consent</string>
    <string name="checkout_afterpay_terms_and_conditions_text">I agree with the %s of AfterPay</string>
    <string name="checkout_afterpay_conditions">payment conditions</string>
    <string name="checkout_klarna_more_information">More information</string>

    <string name="checkout_input_error_empty_field">Required field, please fill it in.</string>
    <string name="checkout_input_error_incorrect_format">Input format is not valid.</string>
</resources>
