<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Spinner
                android:id="@+id/spinner_phoneNumberPrefix"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/checkout_qiwiwallet_country_code_tooltip"
                android:gravity="end"
                tools:ignore="UnusedAttribute" />

            <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:customTextInputLayout_caption="@string/checkout_qiwiwallet_phone_number_caption"
                app:customTextInputLayout_hint="@string/checkout_qiwiwallet_phone_number_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            tools:text="@string/checkout_pay_amount_format" />

        <TextView
            android:id="@+id/textView_surcharge"
            style="@style/Checkout.TextAppearance.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            tools:text="@string/checkout_surcharge_total_amount_format" />

    </LinearLayout>

</ScrollView>
