<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin">

        <TextView
            android:id="@+id/textView_smsCodePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:gravity="center"
            android:text="@string/checkout_card_cup_secure_plus_sms_code_prompt" />

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_card_cup_secure_plus_sms_code_caption">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_smsCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <Button
            android:id="@+id/button_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/checkout_pay_amount_format" />

        <TextView
            android:id="@+id/textView_surcharge"
            style="@style/Checkout.TextAppearance.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            tools:text="@string/checkout_surcharge_total_amount_format" />

    </LinearLayout>

</ScrollView>
