<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        android:animateLayoutChanges="true">

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_doku_email_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_shopperEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:customTextInputLayout_caption="@string/checkout_doku_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName|textCapWords" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:customTextInputLayout_caption="@string/checkout_doku_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName|textCapWords" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            tools:text="@string/checkout_pay_amount_format" />

        <TextView
            android:id="@+id/textView_surcharge"
            style="@style/Checkout.TextAppearance.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            tools:text="@string/checkout_surcharge_total_amount_format" />

    </LinearLayout>

</ScrollView>
