<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/checkout_card_reader_tutorial_title"
        android:textAppearance="@style/Checkout.TextAppearance.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="12dp"
        android:text="@string/checkout_card_reader_tutorial_explanation" />

    <ImageView
        android:id="@+id/imageView_tutorialAnim"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:scaleType="fitStart"
        android:contentDescription="@string/checkout_card_reader_tutorial_explanation"
        tools:src="@drawable/card_reader_tutorial_animation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/standard_quarter_margin">

        <Button
            android:id="@+id/button_dismiss"
            style="@style/Checkout.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_skip"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_enableNfc"
            style="@style/Checkout.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_card_reader_tutorial_enable_nfc"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>
